Archive2/e1/fa78cf4fa8d8da/output
main.cpp:19:13: error: use of undeclared identifier 'qi'; did you mean 'boost::spirit::qi'?
            qi::space, 
            ^~
            boost::spirit::qi
/usr/local/include/boost/spirit/home/qi/stream/stream.hpp:38:48: note: 'boost::spirit::qi' declared here
namespace boost { namespace spirit { namespace qi
                                               ^
1 error generated.
